fix: 修复仪表盘数据缺失 — GitHub 端点 + 博客过滤 + README 更新
- /github 端点从 github_activity[].repos_updated 展平仓库数据（原 github_repos 键不存在导致返回 0）
- 博客抓取移除过度激进的信号关键词过滤，保留所有已监控 AI 实验室文章
- 仪表盘添加空数据友好提示（GitHub/博客面板）
- 测试数据结构同步更新 + AsyncMock 修复 scan 测试
- README: 706 测试、JSON Schema 结构修正、新增 /dashboard 端点

--- a/agent/static/index.html
+++ b/agent/static/index.html
@@ -373,6 +373,10 @@ function renderGithub() {
 
   document.getElementById('gh-count').textContent = `共 ${repos.length} 个仓库`;
   const tbody = document.getElementById('gh-tbody');
+  if (repos.length === 0) {
+    tbody.innerHTML = '<tr><td colspan="5" class="text-center text-slate-500 py-6">无匹配仓库</td></tr>';
+    return;
+  }
   tbody.innerHTML = repos.slice(0, 200).map(r => `<tr>
     <td><a href="${r.url || '#'}" target="_blank">${r.full_name || r.name || '-'}</a></td>
     <td>${fmtNum(r.stars)}</td>
@@ -438,6 +442,10 @@ async function loadBlogs() {
   document.getElementById('bl-count').textContent = `共 ${articles.length} 篇文章，来自 ${totalSources} 个来源`;
 
   const listEl = document.getElementById('bl-list');
+  if (articles.length === 0) {
+    listEl.innerHTML = '<div class="card text-center text-slate-500 py-8">本次扫描未发现新博客文章</div>';
+    return;
+  }
   listEl.innerHTML = Object.entries(groups).map(([src, arts], idx) => `
     <div class="blog-group">
       <div class="blog-header" onclick="this.nextElementSibling.classList.toggle('open')">
