fix: API 扫描补全 X/Twitter 数据 + 分类枚举对齐 DataType (rlhf_preference, agent_tool)

--- a/agent/static/index.html
+++ b/agent/static/index.html
@@ -95,8 +95,10 @@
       <select id="ds-category" onchange="loadDatasets()">
         <option value="">全部类别</option>
         <option value="sft_instruction">SFT / Instruction</option>
+        <option value="rlhf_preference">RLHF / Preference</option>
         <option value="reward_model">Reward Model</option>
         <option value="synthetic">Synthetic</option>
+        <option value="agent_tool">Agent / Tool Use</option>
         <option value="multimodal">Multimodal</option>
         <option value="multilingual">Multilingual</option>
         <option value="rl_environment">RL / Embodied</option>
